--- a/personal web 1/index.html
+++ b/personal web 1/index.html
@@ -6,8 +6,17 @@
     <title>VERONICA MUASYA WEBSITE</title>
 </head>
 <body>
-    <nav></nav>
-
     
+    <header> day 1 of 75 hard</header>
+    <h1>2hrs of daily code</h1>
+    python and machine learning
+    how do you actually build a website 
+
+    tutorial hell
+    how to <code>
+        
+    </code>
+
+
 </body>
 </html>
